--- a/Documentazione/Iterazione1/Test.tex
+++ b/Documentazione/Iterazione1/Test.tex
@@ -22,7 +22,14 @@ L'analisi statica del codice è stata gestita tramite il tool CodeMR.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\textwidth]{images/Problem_iter1.png}
+    \includegraphics[width=0.9\textwidth]{images/Problem2_iter1.png}
+    \caption{Problemi classi}
+    \label{fig:Problemi_iterazione1}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/Problem3_iter1.png}
     \caption{Problemi classi}
     \label{fig:Problemi_iterazione1}
 \end{figure}
@@ -31,7 +38,7 @@ L'analisi statica del codice è stata gestita tramite il tool CodeMR.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.6\textwidth]{images/CodeMR_graph2.png}
+    \includegraphics[width=0.9\textwidth]{images/CodeMR_graph2.png}
     \caption{Struttura dei package}
     \label{fig:Package_iterazione1}
 \end{figure}
