--- a/Documentazione/Iterazione2/Algoritmo.tex
+++ b/Documentazione/Iterazione2/Algoritmo.tex
@@ -58,7 +58,7 @@ Per ogni creditore, si scorre l’elenco dei debitori per saldare i crediti:
 \end{enumerate}
 
 
-\subsubsection{Complessita}
+\subsubsection{Complessità}
 
 La funzione \texttt{CreaDizionario} ha:
 
@@ -74,7 +74,7 @@ La funzione \texttt{CalcolaDebiti} esegue le seguenti operazioni:
 \begin{enumerate}
     \item Richiama \texttt{CreaDizionario} $\rightarrow O(n^2)$
     \item Itera sul dizionario per separare creditori e debitori $\rightarrow O(n)$
-    \item Ordina la lista dei debitori (merge sort) $\rightarrow O(n \log n)$
+    \item Ordina la lista dei debitori  $\rightarrow O(n \log n)$
     \item Associa creditori e debitori
     \begin{itemize}
         \item Itera su tutti i creditori $\rightarrow O(n)$
