Update Documentation: Topologia, Priorita, Architettura

--- a/Documentazione/Iterazione0/Architettura.tex
+++ b/Documentazione/Iterazione0/Architettura.tex
@@ -1,4 +1,4 @@
-
+\newpage
 \subsection{Architettura del Sistema}
 
 Il sistema segue il pattern architetturale \textbf{Model-View-Controller (MVC)}, un'architettura software che separa la logica di presentazione, la logica di business e la gestione dei dati. Questa separazione consente una maggiore modularità e facilita la manutenzione e l'estendibilità del sistema. Le tre componenti principali sono:
