--- a/Documentazione/Iterazione0/CasiDuso.tex
+++ b/Documentazione/Iterazione0/CasiDuso.tex
@@ -2,7 +2,7 @@
 
     \begin{figure}[h]
         \centering
-        \includegraphics[scale=0.4]{images/DiagrammaCasiDusoV1.1.png}
+        \includegraphics[width=1.1\textwidth, trim=3cm 0cm 1cm 0cm]{images/DiagrammaCasiDusoV1.1.png}
         \caption{Diagramma casi d'uso }
     \end{figure}
 
@@ -23,13 +23,15 @@ Di seguito sono riportati i casi d'uso in figura:
     \item \textbf{UC13 - Inserisci spesa}: Voglio poter inserire una spesa di gruppo.
     \item \textbf{UC14 - Elimina spesa}: Voglio poter eliminare una spesa di gruppo.
     \item \textbf{UC15 - Modifica spesa}: Voglio poter modificare una spesa di gruppo.
-    \item \textbf{UC16 - Visualizza spese}: Voglio poter visualizzare le spesa di gruppo.
-    \item \textbf{UC17 - Ricalcolo debiti}: Voglio poter calcolare i debiti.
-    \item \textbf{UC18 - Inserisci spesa personale}: Voglio poter inserire una spesa personali.
-    \item \textbf{UC19 - Elimina spesa personale}: Voglio poter eliminare una spesa personali.
-    \item \textbf{UC20 - Modifica spesa personale}: Voglio poter modificare una spesa personali.
-    \item \textbf{UC21 - Visualizza spesa personale}: Voglio poter visualizzare le spesa personali.
-    \item \textbf{UC22 - Aggiungi denaro a budget}: Voglio poter inserire un budget di risparmio.
-    \item \textbf{UC23 - Togli denaro da budget}: Voglio poter eliminare un budget di risparmio.
-    \item \textbf{UC25 - Visualizza budget}: Voglio poter visualizzare i budget di risparmio.
+    \item \textbf{UC16 - scegli tipologia spesa}: Voglio poter scegliere la tipologia di spesa.
+    \item \textbf{UC17- Visualizza spese}: Voglio poter visualizzare le spesa di gruppo.
+    \item \textbf{UC18 - Ricalcolo debiti}: Voglio poter calcolare i debiti.
+    \item \textbf{UC19 - Inserisci spesa personale}: Voglio poter inserire una spesa personali.
+    \item \textbf{UC20 - Elimina spesa personale}: Voglio poter eliminare una spesa personali.
+    \item \textbf{UC21 - Modifica spesa personale}: Voglio poter modificare una spesa personali.
+    \item \textbf{UC22 - scegli tipologia spesa personale}: Voglio poter scegliere la tipologia di spesa personale.
+    \item \textbf{UC23 - Visualizza spesa personale}: Voglio poter visualizzare le spesa personali.
+    \item \textbf{UC24 - Aggiungi denaro a budget}: Voglio poter inserire un budget di risparmio.
+    \item \textbf{UC25 - Togli denaro da budget}: Voglio poter eliminare un budget di risparmio.
+    \item \textbf{UC26 - Visualizza budget}: Voglio poter visualizzare i budget di risparmio.
 \end{itemize}
