--- a/Documentazione/Iterazione0/priorità.tex
+++ b/Documentazione/Iterazione0/priorità.tex
@@ -19,16 +19,18 @@
         UC1 & Login\\ \hline
         UC2 & Registrazione \\ \hline
         UC3 & Logout \\ \hline
-        UC8 & Invita memebri \\ \hline
+        UC7 & Crea gruppo \\ \hline
+        UC8 & Invita membri \\ \hline
         UC9 & Elimina membri \\ \hline
-        UC10 & Modica memebri \\ \hline
+        UC10 & Modifica membri \\ \hline
         UC11 & Elimina gruppo \\ \hline
         UC12 & Accedi gruppo \\ \hline
         UC13 & Inserisci spesa \\ \hline
         UC14 & Elimina spesa \\ \hline
-        UC15 & Modifica spese \\ \hline
-        UC16 & Visualizza spese \\ \hline
-        UC17 & Ricalcolo debiti \\ \hline
+        UC15 & Modifica spesa \\ \hline
+        UC16 & scegli tipologia spesa \\ \hline
+        UC17 & Visualizza spese \\ \hline
+        UC18 & Ricalcolo debiti \\ \hline
         \end{tabular}
         \caption{Coda alta priorità}
     \end{table}
@@ -41,10 +43,11 @@
         UC4 & Crea alert di gruppo\\ \hline
         UC5 & Modica alert \\ \hline
         UC6 & Elimina alert \\ \hline
-        UC18 & Inserisci spesa personale \\ \hline
-        UC19 & Elimina spesa personale \\ \hline
-        UC20 & Modica spesa personale \\ \hline
-        UC21 & Visualizza spesa personale \\ \hline
+        UC19 & Inserisci spesa personale \\ \hline
+        UC20 & Elimina spesa personale \\ \hline
+        UC21 & Modifica spesa personale \\ \hline
+        UC22 & scegli tipologia spesa personale \\ \hline
+        UC23 & Visualizza spesa personale \\ \hline
         \end{tabular}
         \caption{Coda media priorità}
     \end{table}
@@ -54,10 +57,9 @@
         \begin{tabular}{|c|l|}
         \hline
         \textbf{ID} & \textbf{Titolo} \\ \hline
-        UC22 & Inserisci budget\\ \hline
-        UC23 & Elimina budget \\ \hline
-        UC24 & Modica budget \\ \hline
-        UC25 & Visualizza budget \\ \hline
+        UC24 & Aggiungi denaro a budget \\ \hline
+        UC25 & Togli denaro da budget \\ \hline
+        UC26 & Visualizza budget \\ \hline
         \end{tabular}
         \caption{Coda bassa priorità}
     \end{table}
