--- a/Documentazione/Iterazione1/DiagrammaInterfacce.tex
+++ b/Documentazione/Iterazione1/DiagrammaInterfacce.tex
@@ -1,6 +1,6 @@
-\subsection{Diagramma delle Interfacce per Budget e Risparmio}
+\subsection{Diagramma delle Interfacce - Iterazione 1}
 %spazio per evitare immagine addosso a titolo
 \hspace{1pt}
 \begin{center}
-    \includegraphics[scale=0.5]{images/InterfaceUML-iterazione3.png}
+    \includegraphics[scale=0.5]{images/InterfaceUML-iterazione1.png}
 \end{center}
