--- a/Documentazione/Iterazione3/CasiDuso.tex
+++ b/Documentazione/Iterazione3/CasiDuso.tex
@@ -2,6 +2,6 @@
 
     \begin{figure}[h]
         \centering
-        \includegraphics[scale=0.3]{images/DiagrammaCasiDusoV2.1.png}
-        \caption{Diagramma dei casi d'uso aggiornato per riflettere l'integrazione relativa alla gestione del risparmio.}
+        \includegraphics[width=1\textwidth, trim=3cm 0cm 1cm 0cm]{images/DiagrammaCasiDusoV2.1.png}
+        \caption{Diagramma casi d'uso }
     \end{figure}
