Doc Update: adding UML-interface diagrams

--- a/Documentazione/Iterazione1/DiagrammaInterfacce.tex
+++ b/Documentazione/Iterazione1/DiagrammaInterfacce.tex
@@ -1,4 +1,4 @@
-\subsection{Diagramma delle Interfacce - Iterazione 1}
+\subsection{Diagramma delle Interfacce: Utente e Gruppo}
 %spazio per evitare immagine addosso a titolo
 \hspace{1pt}
 \begin{center}
