--- a/Documentazione/Iterazione2/DiagrammaInterfacce.tex
+++ b/Documentazione/Iterazione2/DiagrammaInterfacce.tex
@@ -1,7 +1,6 @@
-\subsection{Diagramma delle Interfacce - Iterazione 2}
-\begin{figure}[H]
-    \centering
-    % ...inserire qui il diagramma reale delle interfacce...
-    \includegraphics[scale=0.6]{images/MockInterfaceDiagram-iterazione2.png}
-    \caption{Diagramma Interfacce Iterazione 2}
-\end{figure}
+\subsection{Diagramma delle Interfacce: Spesa}
+%spazio per evitare immagine addosso a titolo
+\hspace{1pt}
+\begin{center}
+    \includegraphics[scale=0.4]{images/InterfaceUML-iterazione2.png}
+\end{center}
