--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -102,6 +102,8 @@
 \section{Iterazione 2}
 \input{Iterazione2/CasiUsoImpl.tex}
 \newpage
+\input{Iterazione2/DiagrammaInterfacce.tex}
+\newpage
 \input{Iterazione2/DiagrammaClassi.tex}
 \newpage
 \input{Iterazione2/ComponentDiagram.tex}
