--- a/Documentazione/Iterazione1/CasiUsoImplementati.tex
+++ b/Documentazione/Iterazione1/CasiUsoImplementati.tex
@@ -11,9 +11,9 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
     UC2 & Registrazione \\ \hline
     UC3 & Logout \\ \hline
     UC7 & Crea gruppo \\ \hline
-    UC8 & Invita memebri \\ \hline
+    UC8 & Invita membri \\ \hline
     UC9 & Elimina membri \\ \hline
-    UC10 & Modica memebri \\ \hline
+    UC10 & Modifica membri \\ \hline
     UC11 & Elimina gruppo \\ \hline
     UC12 & Accedi gruppo \\ \hline
     \end{tabular}
